--- a/index.html
+++ b/index.html
@@ -1,11 +1,58 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Filmes Populares</title>
+    <link rel="shortcut icon" href="image/claquete.png">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Kumbh+Sans:wght@100..900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="reset.css">
 </head>
 <body>
+    <header>
+        <div class="container">
+            <h1 class="container-titulo">Filmes Populares</h1>
+            <div class="container__input">
+                <input type="text" id="text" class="container-pesquisa" placeholder="Digite algum filme para pesquisar..." onfocus="this.value='';">
+                <img src="image/search-icon.svg" alt="Ícone de pesquisa" class="container-pesquisa-icone">
+            </div>
+            <div class="container__input">
+                <input type="checkbox" id="checkbox" class="container-checkbox">
+                <label for="checkbox" class="container-checkbox-label">Mostrar meus filmes favoritos apenas</label>
+            </div>   
+        </div>
+    </header>
+
+    <section>
+        <div class="filmes">
+            <div class="filme">
+                <div class="filme__imagem">
+                    <img src="image/Image.svg" alt="" class="filme-imagem">
+                </div>
+                <div class="filme__texto">
+                    <p class="filme-titulo">Avengers Endgame (2019)</p>
+                    <div class="filme__avaliacao">
+                        <div class="filme__nota">
+                            <img id="img-estrela" src="image/Star.svg" alt="icone de estrela">
+                            <span class="avaliacao-paragrafo">9.2</span>
+                        </div>
+                        <div class="filme__fav">
+                            <img id="img-coracao" src="image/Heart.svg" alt="icone de coracao">
+                            <span for="img-coracao" class="avaliacao-paragrafo">Favoritar</span>
+                        </div>
+                    </div>
+                </div>
+                <div class="filme__sinopse">
+                    <p class="filme-sinopse">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been 
+                        the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley 
+                        of type and scrambled it to make a type specimen book.</p>
+                </div>
+            </div>
+        </div>
+    </section>
 
     <script src="app.js" defer></script>
 </body>
