tela de filmes populares

--- a/index.html
+++ b/index.html
@@ -30,10 +30,82 @@
         <div class="filmes">
             <div class="filme">
                 <div class="filme__imagem">
-                    <img src="image/Image.svg" alt="" class="filme-imagem">
+                    <img src="image/Frame 2.svg" alt="capa do filme batman" class="filme-imagem">
+                </div>
+                <div class="filme__texto">
+                    <p class="filme-titulo">Batman (2022)</p>
+                    <div class="filme__avaliacao">
+                        <div class="filme__nota">
+                            <img id="img-estrela" src="image/Star.svg" alt="icone de estrela">
+                            <span class="avaliacao-paragrafo">9.2</span>
+                        </div>
+                        <div class="filme__fav">
+                            <img id="img-coracao" src="image/Vector.svg" alt="icone de coracao">
+                            <span for="img-coracao" class="avaliacao-paragrafo">Favoritar</span>
+                        </div>
+                    </div>
+                </div>
+                <div class="filme__sinopse">
+                    <p class="filme-sinopse">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been 
+                        the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley 
+                        of type and scrambled it to make a type specimen book.</p>
+                </div>
+            </div>
+
+            <div class="filme">
+                <div class="filme__imagem">
+                    <img src="image/Image.svg" alt="capa do filme avengers endgame" class="filme-imagem">
                 </div>
                 <div class="filme__texto">
                     <p class="filme-titulo">Avengers Endgame (2019)</p>
+                    <div class="filme__avaliacao">
+                        <div class="filme__nota">
+                            <img id="img-estrela" src="image/Star.svg" alt="icone de estrela">
+                            <span class="avaliacao-paragrafo">9.2</span>
+                        </div>
+                        <div class="filme__fav">
+                            <img id="img-coracao" src="image/Heart.svg" alt="icone de coracao">
+                            <span for="img-coracao" class="avaliacao-paragrafo">Favoritar</span>
+                        </div>
+                    </div>
+                </div>
+                <div class="filme__sinopse">
+                    <p class="filme-sinopse">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been 
+                        the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley 
+                        of type and scrambled it to make a type specimen book.</p>
+                </div>
+            </div>
+
+            <div class="filme">
+                <div class="filme__imagem">
+                    <img src="image/Frame 2 (2).svg" alt="caoa do filme doutor estranho" class="filme-imagem">
+                </div>
+                <div class="filme__texto">
+                    <p class="filme-titulo">Avatar (2009)</p>
+                    <div class="filme__avaliacao">
+                        <div class="filme__nota">
+                            <img id="img-estrela" src="image/Star.svg" alt="icone de estrela">
+                            <span class="avaliacao-paragrafo">9.2</span>
+                        </div>
+                        <div class="filme__fav">
+                            <img id="img-coracao" src="image/Vector.svg" alt="icone de coracao">
+                            <span for="img-coracao" class="avaliacao-paragrafo">Favoritar</span>
+                        </div>
+                    </div>
+                </div>
+                <div class="filme__sinopse">
+                    <p class="filme-sinopse">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been 
+                        the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley 
+                        of type and scrambled it to make a type specimen book.</p>
+                </div>
+            </div>
+
+            <div class="filme">
+                <div class="filme__imagem">
+                    <img src="image/Frame 2 (1).svg" alt="capa do filme avatar" class="filme-imagem">
+                </div>
+                <div class="filme__texto">
+                    <p class="filme-titulo">Doctor Strange in the Multiverse of Madness</p>
                     <div class="filme__avaliacao">
                         <div class="filme__nota">
                             <img id="img-estrela" src="image/Star.svg" alt="icone de estrela">
