--- a/index.html
+++ b/index.html
@@ -31,6 +31,6 @@
         </div>
     </section>
 
-    <script src="app.js" defer></script>
+    <script type="module" src="app.js" defer></script>
 </body>
 </html>
