--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
         <div class="container">
             <h1 class="container-titulo">Filmes Populares</h1>
             <div class="container__input">
-                <input type="text" id="text" class="container-pesquisa" placeholder="Digite algum filme para pesquisar..." onfocus="this.value='';">
-                <img src="image/search-icon.svg" alt="Ícone de pesquisa" class="container-pesquisa-icone">
+                <input type="text" id="text" class="container-pesquisa" placeholder="Digite algum filme para pesquisar...">
+                <button class="container-pesquisa-icone"><img src="image/search-icon.svg" alt="Ícone de pesquisa" ></button>
             </div>
             <div class="container__input">
                 <input type="checkbox" id="checkbox" class="container-checkbox">
